--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
     sdk: flutter
   essential_rest: ^1.0.18
   provider: ^4.1.1
-
+  shared_preferences: '>=0.5.7+3 <2.0.0'
+  uuid: ^2.1.0
+  flutter_linkify: ^3.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
