--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: '>=0.5.7+3 <2.0.0'
   uuid: ^2.1.0
   flutter_linkify: ^3.1.3
+  url_launcher: ^5.4.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
