--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  essential_rest: ^1.0.18
+  # essential_rest: ^1.0.18
+  rest_client: ^1.0.3
   provider: ^4.1.1
   shared_preferences: '>=0.5.7+3 <2.0.0'
   uuid: ^2.1.0
   flutter_linkify: ^3.1.3
   url_launcher: ^5.4.10
+  floating_search_bar: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
