--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   floating_search_bar: ^0.3.0
   flushbar: ^1.10.4
   font_awesome_flutter: ^8.8.1
+  pretty_json: ^1.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
