--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flushbar: ^1.10.4
   font_awesome_flutter: ^8.8.1
   pretty_json: ^1.0.9
+  flutter_expanded_tile: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
