--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/25817794.jpg
+    - images/logo-here.jpg
+    - images/your_logo.png
+    - images/yourlogohere.jpg
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
