--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # essential_rest: ^1.0.18
   rest_client: ^1.0.3
   provider: ^4.1.1
   shared_preferences: '>=0.5.7+3 <2.0.0'
@@ -35,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   pretty_json: ^1.0.9
   flutter_expanded_tile: ^0.2.1
+  flutter_splash: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
